@@ -1,3 +1,7 @@
+2021-11-13  vaiorabbit  <http://twitter.com/vaiorabbit>
+
+	* examples/core_drop_files.rb: Added
+
 2021-11-09  vaiorabbit  <http://twitter.com/vaiorabbit>
 
 	* examples/models_first_person_maze.rb: Added
